--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     border-radius: 2rem;
     font-family: 'Raleway', sans-serif;
     width: 50%;
+    height: 70vh;
     padding: 6rem;
     text-align: center;
 }
